# datalab-schemas

./: .env.public  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yaml  main.yaml  test_pages_build.yaml
examples/: Item-001.yaml  README.md
project/excel/: datalab_schema.xlsx
project/graphql/: datalab_schema.graphql
project/jsonld/: datalab_schema.context.jsonld  datalab_schema.jsonld
project/jsonschema/: datalab_schema.schema.json
project/owl/: datalab_schema.owl.ttl
project/prefixmap/: datalab_schema.yaml
project/protobuf/: datalab_schema.proto
project/shacl/: datalab_schema.shacl.ttl
project/shex/: datalab_schema.shex
project/sqlschema/: datalab_schema.sql
src/datalab_schema/schema/: datalab_schema.yaml
src/datalab_schemas/datamodel/: __init__.py  datalab_schema.py
src/docs/: about.md
tests/: __init__.py  test_data.py
